...
          />
          <Tab.Screen
            name="Map"
            component={MapScreen}
            options={{
              tabBarLabel: 'Map',
              tabBarButtonTestID: 'tab-map',
            }}
          />
          <Tab.Screen
            name="Settings"
            component={SettingsScreen}
            options={{
...
